# 20_numbers_challenge_RL

./: Makefile  README.md  pyproject.toml
.github/workflows/: checking.yml
src/gym/envs/: 20_numbers_challenge.py  twenty_numbers_challenge.py
