[tool.poetry]
name = "20-numbers-challenge-rl"
version = "0.1.0"
description = "Solving the 20 numbers challenge with Reinforcement Learning"
authors = ["Simone Meloni <sim.meloni@gmail.com>"]
license = "Apache Spark 2.0"
readme = "README.md"
packages = [{include = "20_numbers_challenge_rl"}]

[tool.poetry.dependencies]
python = "^3.7"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
