[tool.poetry]
name = "20-numbers-challenge-rl"
version = "0.1.0"
description = "Solving the 20 numbers challenge with Reinforcement Learning"
authors = ["Simone Meloni <sim.meloni@gmail.com>"]
license = "Apache Spark 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
gymnasium = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
